--- a/action.yml
+++ b/action.yml
@@ -1,16 +1,16 @@
 # action.yml
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'License Report'
+description: 'Generate project license report'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  format:  # id of input
+    description: 'Report format Test'
     required: true
-    default: 'World'
+    default: 'html'
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+  message: # id of output
+    description: 'Was the report generation successful'
 runs:
   using: 'docker'
   image: 'docker://mantisware/lic_report:latest' #'Dockerfile'
   args:
-    - ${{ inputs.who-to-greet }}
+    - ${{ inputs.format }}
