--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - name: Licenses Report Action Step
         id: lic_report
-        uses: WaldoMarais/testDockerActions@latest
+        uses: WaldoMarais/testDockerActions@v3
         with:
           format: 'html'
