--- a/action.yml
+++ b/action.yml
@@ -14,4 +14,5 @@ runs:
   using: 'docker'
   image: 'docker://mantisware/lic_report:latest' #'Dockerfile'
   args:
-    - ${{ inputs.format }} ${{ inputs.path }}
+    - ${{ inputs.format }}
+    - ${{ inputs.path }}
